<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Chess Mob-Free</string>
    <string name="app_namenofree">Chess Mob</string>
    <string name="action_settings">Settings</string>
    <string name="new_game">New Game</string>
    <string name="load_game">Load Game</string>
    <string name="upgrade_game">Update To Full Version</string>
    <string name="title_activity_game">Chess Mob-Free</string>
    <string name="title_activity_game_settings">Select Your Challenge</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="leaderboards">Leaderboards</string>
    <string name="title_activity_leaderboard">Leaderboard</string>
    <string name="hello_world">Hello world!</string>
    <string name="opponent">Opponent</string>
    <string name="startgame">Start Game</string>
    <string name="player">Player</string>
    <string name="difficulty">Difficulty</string>
    <string name="yourpiece">Your Piece Set</string>
    <string name="beginner">Beginner</string>
    <string name="defaultpieceset">Pawns</string>
    <string name="oppopieceset">Opponent Piece Set</string>
    <string name="resume">Resume</string>
    <string name="turndescription">If Highlighted Then Its Your Turn</string>
    <string name="board">Board</string>
    <string name="undo">Undo</string>
    <string name="menu">Menu</string>
    <string name="playercolor">Player Color</string>
    <string name="white">White</string>
    <string name="computer">Computer</string>
    <string name="returntomenu">Return To Main Menu</string>
    <string name="returntogame">Return To Game</string>
    <string name="areyousuretext">You have a previously saved game!</string>
    <string name="areyousureyesornotext"> Are you sure you want to start a new game?</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="amateur">Amateur</string>
    <string name="professional">Professional</string>
    <string name="black">Black</string>
    <string name="convertpiecetitle">Select The Piece Type To Convert To</string>
    <string name="accept">Accept</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="app_id">633019000094648</string>

</resources>