<ScrollView xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background2" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".GameSettings" >

        <TextView
            android:id="@+id/OpponentTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/opponent"
            android:textColor="#FFAA00"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/DifficultyTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Computer"
            android:layout_centerHorizontal="true"
            android:text="@string/difficulty"
            android:textColor="#FFAA00"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/PlayerColorTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/DifficultyTitle"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="47dp"
            android:text="@string/playercolor"
            android:textColor="#FFAA00"
            android:textSize="24sp" />

        <Button
            android:id="@+id/Player"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/PlayerColorTitle"
            android:layout_below="@+id/OpponentTitle"
            android:background="@drawable/roundedcorners"
            android:text="@string/player"
            android:textColor="#FFAA00" />

        <Button
            android:id="@+id/Professional"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/Amateur"
            android:layout_toRightOf="@+id/Amateur"
            android:background="@drawable/roundedcorners"
            android:text="@string/professional"
            android:textColor="#FFAA00" />

        <Button
            android:id="@+id/Computer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/Player"
            android:layout_alignBottom="@+id/Player"
            android:layout_toRightOf="@+id/Player"
            android:background="@drawable/highlightedroundedcorners"
            android:text="@string/computer"
            android:textColor="#FFAA00" />

        <Button
            android:id="@+id/Black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/YourPieceTitle"
            android:layout_alignRight="@+id/PlayerColorTitle"
            android:background="@drawable/roundedcorners"
            android:text="@string/black"
            android:textColor="#FFAA00" />

        <Button
            android:id="@+id/White"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/PlayerColorTitle"
            android:layout_toLeftOf="@+id/Black"
            android:background="@drawable/highlightedroundedcorners"
            android:text="@string/white"
            android:textColor="#FFAA00" />

        <Button
            android:id="@+id/Beginner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/DifficultyTitle"
            android:layout_toLeftOf="@+id/DifficultyTitle"
            android:background="@drawable/highlightedroundedcorners"
            android:text="@string/beginner"
            android:textColor="#FFAA00" />

        <Button
            android:id="@+id/Amateur"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/Beginner"
            android:layout_alignBottom="@+id/Beginner"
            android:layout_alignLeft="@+id/DifficultyTitle"
            android:background="@drawable/roundedcorners"
            android:text="@string/amateur"
            android:textColor="#FFAA00" />

        <TextView
            android:id="@+id/YourPieceTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/White"
            android:layout_marginTop="17dp"
            android:text="@string/yourpiece"
            android:textColor="#FFAA00"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/OppoPieceTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/YourPieceTitle"
            android:layout_below="@+id/YourPiece"
            android:text="@string/oppopieceset"
            android:textColor="#FFAA00"
            android:textSize="24sp" />

        <Button
            android:id="@+id/StartGame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/OppoPiece"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:background="@drawable/roundedcorners"
            android:padding="10dp"
            android:text="@string/startgame"
            android:textColor="#FFAA00"
            android:textSize="32sp" />

        <TextView
            android:id="@+id/OppoPiece"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/OpponentSet"
            android:layout_toRightOf="@+id/LeftConvertPiece"
            android:minWidth="60dp"
            android:text="@string/defaultpieceset"
            android:textColor="#FFAA00"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/LeftConvertPiece"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/YourPiece"
            android:layout_toRightOf="@+id/Amateur"
            android:contentDescription="@string/app_name"
            android:src="@drawable/leftselectarrow" />

        <ImageView
            android:id="@+id/LeftSelectOppoPiece"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/OppoPiece"
            android:layout_toLeftOf="@+id/OppoPiece"
            android:contentDescription="@string/app_name"
            android:src="@drawable/leftselectarrow" />

        <TextView
            android:id="@+id/YourPiece"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/YourPieceTitle"
            android:layout_toRightOf="@+id/LeftConvertPiece"
            android:minWidth="60dp"
            android:text="@string/defaultpieceset"
            android:textColor="#FFAA00"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/YourSet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/YourPiece"
            android:layout_toRightOf="@+id/Black"
            android:contentDescription="Your Choosen Set"
            android:src="@drawable/pawn_white" />

        <ImageView
            android:id="@+id/RightSelectOppoPiece"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/OppoPiece"
            android:layout_alignLeft="@+id/RightConvertPiece"
            android:contentDescription="@string/app_name"
            android:src="@drawable/rightselectarrow" />

        <ImageView
            android:id="@+id/RightConvertPiece"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/YourPiece"
            android:layout_toRightOf="@+id/YourPiece"
            android:contentDescription="@string/app_name"
            android:src="@drawable/rightselectarrow" />

        <ImageView
            android:id="@+id/OpponentSet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/YourSet"
            android:layout_alignTop="@+id/OppoPieceTitle"
            android:contentDescription="Your opponent choosen set"
            android:src="@drawable/pawn_white" />
    </RelativeLayout>

</ScrollView>