<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/MenuDialogLinearLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background"
    android:clipChildren="true"
    android:orientation="vertical"
    android:overScrollMode="never" >

    <TextView
        android:id="@+id/returntogame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:text="@string/returntogame"
        android:textColor="#FFAA00"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/newgame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="17dp"
        android:text="@string/new_game"
        android:textColor="#FFAA00"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/returntomenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="14dp"
        android:text="@string/returntomenu"
        android:textColor="#FFAA00"
        android:textSize="30sp" />

</LinearLayout>